# biopsykit-dashboard

./: README.md  __main__.py  combine_all_files.py  convert_files.py  dashboard.html  index.html  index.js  main.py  main_ide.py  pyproject.toml  serviceWorker.js  single_pipeline.py
.github/workflows/: code_quality.yml  test.yml  test_and_build.yml  test_build_and_deploy.yml
Tests/Physiological/: ProcessingTests.py  RecordingsTests.py
Writerside/: hi.tree
Writerside/topics/: General-Info.md  How-to-contribute.md  starter-topic.md
assets/Markdown/: AskToAddTimes.md  AskToConvertScales.md  AskToDetectOutliers.md  AskToSetLoadingParameters.md  ChangeFreqBands.md  CheckSelectedQuestionnaires.md  ChooseSubtypes.md  Compress.md  DownloadResults.md  ECG_FilesUploaded.md  EditStartAndStopTimes.md  FillScoreDict.md  FirstPagePhysiologicalData.md  LoadQuestionnaireData.md  OutlierDetection.html  OutlierParams.md  PhysSignalType.md  ProcessHRV.md  ProcessingAndPreview.md  ProcessingPreSteps.md  SelectCFTSheet.md  SelectTimes.md  WelcomeText.md  number_of_recordings.md  number_of_sessions.md
assets/PWA/: site.webmanifest
assets/WheelFiles/: biopsykit-0.9.0-py3-none-any.whl  docopt-0.6.2-py2.py3-none-any.whl  littleutils-0.2.2-py3-none-any.whl  pingouin-0.5.4-py3-none-any.whl  zope.interface-6.2.dev0-py3-none-any.whl
assets/yaml/: config.yml
dashboard/: dashboard.html  dashboard.js  serviceWorker.js  site.webmanifest
src/: AdaptedNilspod.py  ECGPipe.py  Main.py  MainPage.py  __init__.py  main.py  main_page.py  under_construction_page.py  utils.py
src/MainPage/: MAIN_CONSTANTS.py  __init__.py  main_page.py
src/Miscellaneous/: miscellaneous.py
src/Physiological/: AdaptedNilspod.py  CONSTANTS.py  PHYSIOLOGICAL_CONSTANTS.py  PhysiologicalBase.py  __init__.py  add_times.py  choose_subtypes.py  compress_files.py  custom_components.py  dataArrived.py  data_arrived.py  download_results.py  ecgPipe.py  ecg_pipe.py  fileUpload.py  file_upload.py  miscellaneous.py  outlierDetection.py  outlier_detection.py  physiological_pipeline.py  processHRV.py  process_hrv.py  processingAndPreview.py  processing_and_preview.py  recordings.py  relative_band_energy.py  result_preview.py  rsp_settings.py  select_cft_sheet.py  select_times.py  sessionKind.py  session_kind.py  sessions.py  signal_type.py  trimSession.py  trim_session.py
src/Psychological/: __init__.py  psychological_pipeline.py  setup_study.py
src/Questionnaire/: QUESTIONNAIRE_CONSTANTS.py  __init__.py  check_selected_questionnaires.py  convert_scale.py  crop_scale.py  dataframe_styler.py  download_results.py  invert_scores.py  load_data.py  loading_parameters.py  questionnaire_base.py  questionnaire_pipeline.py  select_scores.py  show_results.py  upload_questionnaire_data.py  wide_to_long.py
src/Saliva/: SALIVA_CONSTANTS.py  SalivaBase.py  __init__.py  ask_for_format.py  condition_list.py  load_saliva_data.py  saliva_features.py  saliva_pipeline.py  sample_times.py
src/Sleep/: SLEEP_CONSTANTS.py  __init__.py  choose_device.py  choose_file_or_folder.py  condition_list_sleep.py  download_sleep_results.py  plotting_sleep.py  process_sleep_data.py  results_preview.py  set_sleep_data_parameters.py  sleep_base.py  sleep_pipeline.py  upload_parameters.py  upload_sleep_data.py
tests/Physiological/: AddTimesTests.py  DataArrivedTests.py  FileUploadTests.py  OutlierDetectionTests.py  ProcessHrvTests.py  ProcessingTests.py  RecordingsTests.py  RspSettingsTests.py  SessionTests.py  (+2 more)
(+53 files in other folders)
