[tool.poetry]
name = "biopsykit-dashboard"
version = "0.1.0"
description = ""
authors = ["Simon Meske <simon.h.meske@fau.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
biopsykit = "^0.9.0"
panel = "1.2.1"
nilspodlib = "3.6.0"
pandas = "1.5.2"
numpy = "1.23.5"
typing-extensions = "4.4.0"
packaging = "21.3"
param = "1.12.2"
pytz = "2022.6"
holoviews = "1.17.0"
pytest = "7.4.0"
six = "^1.16.0"
plotly = "^5.17.0"
xgboost = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
