[tool.poetry]
name = "biopsykit-dashboard"
version = "0.1.0"
description = ""
authors = ["Simon Meske <simon.h.meske@fau.de>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
biopsykit = "^0.9.0"
panel = "^1.3.1"
nilspodlib = "3.6.0"
pandas = "1.5.2"
numpy = "1.23.5"
typing-extensions = "4.4.0"
packaging = "21.3"
param = ">=2.0.0,<3.0"
pytz = "2022.6"
holoviews = "1.17.0"
pytest = "~7"
six = "^1.16.0"
plotly = "^5.17.0"
mne = "~1.2.1"
ipython = {version = "^7", optional = true}
ipywidgets = {version = "^8", optional = true}
ipympl = {version = "^0.9", optional = true}
pingouin = "^0.5.3"

[tool.poetry.dev-dependencies]
black = { version="^22", extras=["jupyter", "d"] }
poethepoet = "^0.10.0"
pytest = "^7"
pytest-cov = "^2"
ipykernel = "^6"
ruff = "^0.0.261"
sphinx = "^4"
numpydoc = "^1"
sphinx-gallery = "^0.10.0"
sphinx_issues = "^1.2.0"
pydata-sphinx-theme = "^0.6.2"
recommonmark = "^0.6.0"
toml = "^0.10.1"
memory_profiler = "^0.57.0"
coverage-badge = "^1.0.1"
sphinx-copybutton = "^0.4.0"
nbsphinx = "^0.8.7"
mne = {version = "^1.2.3", optional = true}

[tool.poetry.extras]
mne = ["mne"]
jupyter = ["ipython", "ipympl", "ipywidgets"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = {cmd = "pytest tests/ ", help = "Run Pytest." }
run_local = {cmd = "panel serve  main.py --autoreload --show", help = "Run dashboard locally." }
convert_files = {cmd = "python convert_files.py", help = "Convert files to HDF5." }
build_pipelines = {cmd = "python convert_files.py --build-all", help = "Build pipelines." }
